@@ -22,6 +22,8 @@ ChangeLog
 [-] * Fixed handling of error response for security status in AT.
 [-] * Fixed segfault on systems with very low memory limits.
 [!] * Development now goes on in Git repository, please check README.
+[!] * 6510 driver now dynamically allocates memory for file caches, what
+      reduces Gammu memory usage by 800 MiB.
     
 20090709 - 1.25.0
 
